@@ -1,7 +1,6 @@
 # Project Title
 JobHub
 
-
 ## Description
 
 This GitHub repository hosts a JavaFX application for a job search platform, designed to streamline the job search process. The application utilizes MySQL as its database backend, ensuring efficient data storage and retrieval.
@@ -10,11 +9,9 @@ This GitHub repository hosts a JavaFX application for a job search platform, des
 ## Table of Contents
 
 1. [Installation](#installation)
-2. [Usage](#usage)
-3. [Configuration](#configuration)
-4. [Documentation](#documentation)
-5. [Build and Deployment](#build-and-deployment)
-6. [Contact Information](#contact-information)
+2. [Configuration](#configuration)
+3. [Usage](#usage)
+4. [Contact Information](#contact-information)
 
 ## Installation
 ### 1. Clone the Repository
@@ -28,7 +25,18 @@ All project dependencies are specified in the `pom.xml` file. Maven will automat
 ```
 cd D:/JobHub
 mvn dependency:resolve
-
 ```
+## configuration
+1. Check classes in java/DataBase and change username and password for user root to Your specific user
+2. Check resources/com/DataBase and run batch files after editing the connection to establish database and all tables and related stuff
 
+## usage
 
+1. Check ScreenShots for a UI & UX
+2. Add run configuration --module-path "C:\YourPath\openjfx-21.0.1_windows-x64_bin-sdk\javafx-sdk-21.0.1\lib" --add-modules javafx.controls,javafx.fxml
+3. Note : double-click on a tableView usually do some important action (Apply,view details)
+
+## contact-information
+
+1. Email :[Email me](mailto:jamilmahdi77@gmail.com)
+2. Linked in : [My LinkedIn Profile](https://www.linkedin.com/in/mahdi-jamil-902351261/)
